WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221584
REGRESSION (
r271660
): Unable to interact with page after long-pressing image on images.google.com
https://bugs.webkit.org/show_bug.cgi?id=221584
Summary
REGRESSION (r271660): Unable to interact with page after long-pressing image ...
Wenson Hsieh
Reported
2021-02-08 15:56:48 PST
<
rdar://problem/74073581
>
Attachments
Patch
(13.72 KB, patch)
2021-02-08 18:48 PST
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix non-internal build
(13.75 KB, patch)
2021-02-08 19:07 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-02-08 18:48:14 PST
Comment hidden (obsolete)
Created
attachment 419664
[details]
Patch
Wenson Hsieh
Comment 2
2021-02-08 19:07:52 PST
Created
attachment 419668
[details]
Fix non-internal build
Wenson Hsieh
Comment 3
2021-02-09 09:54:40 PST
Comment on
attachment 419668
[details]
Fix non-internal build Thanks for the review!
EWS
Comment 4
2021-02-09 09:58:01 PST
Committed
r272584
: <
https://commits.webkit.org/r272584
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419668
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug